fixed emoji alignment

--- a/src/components/Calendar/Day/Day.scss
+++ b/src/components/Calendar/Day/Day.scss
@@ -66,23 +66,40 @@
     margin-bottom: 5px;
     text-align: center;
 
+    @media screen and (min-width: $bp-desktop-md) {
+      font-size: 16px;
+      width: 28px;
+      height: 28px;
+      line-height: 28px;
+
+      span {
+        display: inline-block;
+        margin-left: -5px;
+        margin-top: 1px;
+      }
+    }
+
+    @media screen and (min-width: $bp-desktop-lg) {
+      font-size: 18px;
+      width: 30px;
+      height: 30px;
+      line-height: 30px;
+      text-align: center;
+
+      span {
+        margin-left: -4px;
+      }
+    }
+
     @media #{$retina} { 
       text-align: right;
     }
 
-    @media screen and (min-width: $bp-desktop-md) {
-      font-size: 17px;
-      width: 28px;
-      height: 28px;
-      line-height: 28px;
-    }
-
-    @media screen and (min-width: $bp-desktop-lg) {
-      font-size: 19px;
-      width: 32px;
-      height: 32px;
-      line-height: 32px;
-      text-align: center;
+    @media #{$retina-desktop-md} { 
+      span { 
+        margin-right: 6px;
+        margin-left: 0;
+      }
     }
   }
 }
