--- a/src/components/TagList/Tag/Tag.scss
+++ b/src/components/TagList/Tag/Tag.scss
@@ -24,7 +24,6 @@
     background-position: 100% 0;
     transition: all .2s ease-in-out;
   }
-    
 
   @media screen and (min-width: $bp-desktop) {
     margin: 0 0 5px 0;
@@ -40,5 +39,10 @@
     font-size: 16px;
     padding: 12px;
     margin: 0 0 7px 0;
+
+    span {
+      min-width: 22px;
+      display: inline-block;
+    }
   }
 }
